--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -4,6 +4,7 @@
     font-style: normal;
     src: url('fonts/roboto.woff2') format('woff2'),
          url('fonts/roboto.woff') format('woff');
+    font-display: swap;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
     font-style: normal;
     src: url('fonts/roboto-bold.woff2') format('woff2'),
          url('fonts/roboto-bold.woff') format('woff');
+    font-display: swap;
 }
 
 @font-face {
@@ -20,6 +22,7 @@
     font-style: italic;
     src: url('fonts/roboto-bolditalic.woff2') format('woff2'),
          url('fonts/roboto-bolditalic.woff') format('woff');
+    font-display: swap;
 }
 
 @font-face {
@@ -28,6 +31,7 @@
     font-style: italic;
     src: url('fonts/roboto-italic.woff2') format('woff2'),
          url('fonts/roboto-italic.woff') format('woff');
+    font-display: swap;
 }
 
 @font-face {
@@ -36,6 +40,7 @@
     font-style: normal;
     src: url('fonts/cousine.woff2') format('woff2'),
          url('fonts/cousine.woff') format('woff');
+    font-display: swap;
 }
 
 @font-face {
@@ -44,6 +49,7 @@
     font-style: normal;
     src: url('fonts/cousine-bold.woff2') format('woff2'),
          url('fonts/cousine-bold.woff') format('woff');
+    font-display: swap;
 }
 
 @font-face {
@@ -52,6 +58,7 @@
     font-style: italic;
     src: url('fonts/cousine-bolditalic.woff2') format('woff2'),
          url('fonts/cousine-bolditalic.woff') format('woff');
+    font-display: swap;
 }
 
 @font-face {
@@ -60,4 +67,5 @@
     font-style: italic;
     src: url('fonts/cousine-italic.woff2') format('woff2'),
          url('fonts/cousine-italic.woff') format('woff');
+    font-display: swap;
 }
