--- a/src/layouts/partials/prev-next.html
+++ b/src/layouts/partials/prev-next.html
@@ -1,8 +1,10 @@
-<nav id="prev-next">
-    <ul>
-        {{/* Hugo's sense of "prev/next" is swapped for this use case! */}}
-        {{ with .NextPage }}<li><a href="{{ .RelPermalink }}">&larr; {{ .LinkTitle }}</a></li>{{ end }}
-        {{ with .Parent }}<li><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>{{ end }}
-        {{ with .PrevPage }}<li><a href="{{ .RelPermalink }}">{{ .LinkTitle }} &rarr;</a></li>{{ end }}
-    </ul>
-</nav>
+{{ if $.Site.Params.enableNav }}
+    <nav id="prev-next">
+        <ul>
+            {{/* Hugo's sense of "prev/next" is swapped for this use case! */}}
+            {{ with .NextPage }}<li><a href="{{ .RelPermalink }}">&larr; {{ .LinkTitle }}</a></li>{{ end }}
+            {{ with .Parent }}<li><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>{{ end }}
+            {{ with .PrevPage }}<li><a href="{{ .RelPermalink }}">{{ .LinkTitle }} &rarr;</a></li>{{ end }}
+        </ul>
+    </nav>
+{{ end }}
