--- a/src/layouts/partials/main-menu.html
+++ b/src/layouts/partials/main-menu.html
@@ -1,17 +1,19 @@
-<aside id="main-menu">
-    {{ if ne .RelPermalink "/" }}
-    <style>
-        #main-menu a[href$="{{ .RelPermalink }}"] {
-            color: #b40;
-        }
-    </style>
-    {{ end }}
+{{ if $.Site.Params.enableNav }}
+    <aside id="main-menu">
+        {{ if ne .RelPermalink "/" }}
+        <style>
+            #main-menu a[href$="{{ .RelPermalink }}"] {
+                color: #b40;
+            }
+        </style>
+        {{ end }}
 
-    <nav>
-        <h2>
-            <a href="/" title="{{ .Site.Params.Subtitle }}">{{ .Site.Title }}</a>
-        </h2>
+        <nav>
+            <h2>
+                <a href="/" title="{{ .Site.Params.Subtitle }}">{{ .Site.Title }}</a>
+            </h2>
 
-        {{ partial "list-pages-recursive" (.Site.GetPage "/topics") }}
-    </nav>
-</aside>
+            {{ partial "list-pages-recursive" (.Site.GetPage "/topics") }}
+        </nav>
+    </aside>
+{{ end }}
