Add composite drawing and menu functions

--- a/src/layouts/shortcodes/data-table/font.html
+++ b/src/layouts/shortcodes/data-table/font.html
@@ -7,7 +7,7 @@
         <th>Index</th>
         <th>Offset (Bytes)</th>
         <th>Character</th>
-        <th>ASCII Code (Decimal)</th>
+        <th>ASCII/CP437 Code (Decimal)</th>
     </tr>
     {{ range $.Site.Data.font.table }}
         <tr>
