WaitSpinner() aside, font page charset update, fn index, bugs

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -131,6 +131,7 @@ main {
 
 .markdown {
     line-height: 1.7;
+    overflow-wrap: break-word;
 
     aside, blockquote {
         margin: 1rem 2rem;
