--- a/src/layouts/shortcodes/image.html
+++ b/src/layouts/shortcodes/image.html
@@ -26,7 +26,7 @@
     {{ end }}
 {{ end }}
 
-<a href="{{ $src }}"><img
+<p><a href="{{ $src }}"><img
     src="{{ $src }}" srcset="{{ delimit $srcset ", " }}"
     alt="{{ $alt | markdownify }}" title="{{ $alt | markdownify }}"
-></a>
+></a></p>
