--- a/src/layouts/_default/baseof.html
+++ b/src/layouts/_default/baseof.html
@@ -14,6 +14,13 @@
         {{ $css := resources.Get "scss/main.scss" | toCSS $cssOptions }}
         <link rel="stylesheet" href="{{ $css.RelPermalink }}">
         <title>{{ block "pageTitle" . }}{{ with .Params.Title }}{{ . | markdownify }} | {{ end }}{{ .Site.Title | markdownify }}{{ end }}</title>
+        {{ if ne .RelPermalink "/" }}
+        <style>
+            #main-menu a[href$="{{ .RelPermalink }}"] {
+                color: #b40;
+            }
+        </style>
+        {{ end }}
     </head>
 
     <body>
