Add additional hint sheet and call out some unused graphics

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -20,6 +20,11 @@ code, pre, samp {
     font-family: Cousine, monospace;
     font-size: 0.9em;
     letter-spacing: normal;
+
+    // HACK: So I don't have to re-wrap the "on-disk hint sheet" document
+    &.language-plaintext {
+        font-size: 0.85em;
+    }
 }
 
 kbd {
