Add game loop functions; fix joystick errors and describe found bug
Minor: fix table>p spacing, add links to front page, issues in footer

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -235,6 +235,14 @@ main {
             border: 1px solid gray-from-lightness(70%);
             font-size: 0.8em;
             line-height: 1.2;
+
+            p:first-child {
+                margin-top: 0;
+            }
+
+            p:last-child {
+                margin-bottom: 0;
+            }
         }
     }
 
