Add map drawing functions, fix Borland details, HTML entity cleanup

--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -15,8 +15,7 @@
     <footer>
         <address>
             <p>
-                <strong>{{ $.Site.Title | markdownify }}</strong> is a contrivance by <a href="{{ $authorUrl }}">Scott Smitelli</a>.
-                Found an <a href="{{ $.Site.Params.gitIssuesUrl }}" title="...or a bug, or an inaccuracy!">issue</a>?
+                <strong>{{ $.Site.Title | markdownify }}</strong> is a contrivance by <a href="{{ $authorUrl }}">Scott Smitelli</a>. Found an <a href="{{ $.Site.Params.gitIssuesUrl }}" title="...or a bug, or an inaccuracy!">issue</a>?
             </p>
         </address>
 
