Game logic/player movement pages; explosion wrapping explanation; blockquote footnotes; git hash in footer

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -327,6 +327,11 @@ main {
     }
 }
 
+.definition {
+    cursor: help;
+    text-decoration: underline dotted gray-from-lightness(35%);
+}
+
 .full-width {
     width: 100%;
 }
