--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -10,7 +10,7 @@
     <address>
         <p>
             <strong>{{ site.Title }}</strong> is a contrivance by {{/*
-            */}}<a href="{{ $p.authorUrl }}">Scott Smitelli</a>. Found an {{/*
+            */}}<a href="{{ $p.authorUrl }}" rel="author">Scott Smitelli</a>. Found an {{/*
             */}}<a href="{{ $p.gitIssuesUrl }}" title="...or a bug, or an inaccuracy!">issue</a>?
         </p>
     </address>
