--- a/src/layouts/shortcodes/data-table/actor-sprite.html
+++ b/src/layouts/shortcodes/data-table/actor-sprite.html
@@ -34,7 +34,7 @@
         <tr>
             <th>Sprite Type</th>
             <th>Frames</th>
-            <th colspan="{{ $max_frames }}">Width&times;Height of Each Frame (0&ndash;{{ sub $max_frames 1 }})</th>
+            <th colspan="{{ $max_frames }}">Width&times;Height of Frames (0&ndash;{{ sub $max_frames 1 }})</th>
             <th>Description</th>
         </tr>
         {{ end }}
