--- a/src/layouts/shortcodes/data-table/actor.html
+++ b/src/layouts/shortcodes/data-table/actor.html
@@ -28,11 +28,11 @@
             <th rowspan="2">Actor Type</th>
             <th rowspan="2">Sprite Type</th>
             <th colspan="2">Shift</th>
-            <th rowspan="2">Always Active</th>
-            <th rowspan="2">Remains Active</th>
-            <th rowspan="2">Ledge Eager</th>
-            <th rowspan="2">Has Gravity</th>
-            <th colspan="5">Data</th>
+            <th rowspan="2">Force Active</th>
+            <th rowspan="2">Stay Active</th>
+            <th rowspan="2">Acrophile</th>
+            <th rowspan="2">Weighted</th>
+            <th colspan="5">Freeform Data</th>
             <th rowspan="2">Description</th>
         </tr>
         <tr>
