--- a/src/layouts/_default/baseof.html
+++ b/src/layouts/_default/baseof.html
@@ -54,7 +54,7 @@
             <div id="main-page">
                 <header class="responsive-header">
                     <label for="main-menu-control">
-                        <img src="/img/menu.svg" alt="Menu">
+                        <img src="/img/menu.svg" width="24" height="24" alt="Menu">
                     </label>
                 </header>
 
