--- a/src/layouts/_default/baseof.html
+++ b/src/layouts/_default/baseof.html
@@ -1,8 +1,8 @@
-{{ $fav := resources.Get "img/favicon.ico" }}
+{{ $ico := resources.Get "img/favicon.ico" }}
 {{ $css := resources.Get "scss/main.scss" | toCSS (
     dict "targetPath" "css/main.css" "outputStyle" "compressed"
-) }}
-{{ $js := resources.Get "js/main.js" | minify }}
+) | fingerprint }}
+{{ $js := resources.Get "js/main.js" | minify | fingerprint }}
 
 <!DOCTYPE html>
 <html lang="{{ .Language.Lang }}">
@@ -23,9 +23,7 @@
             {{ end }}
         {{ end }}
         <link rel="canonical" href="{{ .Permalink }}">
-        {{ with .Prev }}<link rel="next" href="{{ .RelPermalink }}">{{ end }}
-        {{ with .Next }}<link rel="prev" href="{{ .RelPermalink }}">{{ end }}
-        <link rel="shortcut icon" type="{{ $fav.MediaType }}" href="{{ $fav.RelPermalink }}">
+        <link rel="shortcut icon" type="{{ $ico.MediaType }}" href="{{ $ico.RelPermalink }}">
         <link rel="sitemap" type="application/xml" href="{{ relURL .Sitemap.Filename }}">
         <link rel="stylesheet" href="{{ $css.RelPermalink }}">
         <script src="{{ $js.RelPermalink }}" defer></script>
@@ -54,7 +52,9 @@
             <div id="main-page">
                 <header class="responsive-header">
                     <label for="main-menu-control">
-                        <img src="/img/menu.svg" width="24" height="24" alt="Menu">
+                        <svg viewBox="0 0 24 24" width="24" height="24" title="Menu">
+                            <path d="M3 6v2h18v-2zm0 5v2h18v-2zm0 5v2h18v-2z"/>
+                        </svg>
                     </label>
                 </header>
 
