`TryPounce()`/`ActFootSwitch()`; fix image/index error on barrels-baskets; make overlines tighter; copy naming improvements and `static` var classes from cosmore

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -285,7 +285,8 @@ main {
     }
 
     .overline {
-        text-decoration-line: overline;
+        text-decoration-line: underline;
+        text-underline-offset: -0.9em;
     }
 
     @media screen and (min-width: $float-image-breakpoint) {
