--- a/src/layouts/_default/baseof.html
+++ b/src/layouts/_default/baseof.html
@@ -52,8 +52,8 @@
             <div id="main-page">
                 <header class="responsive-header">
                     <label for="main-menu-control">
-                        <svg viewBox="0 0 24 24" width="24" height="24" title="Menu">
-                            <path d="M3 6v2h18v-2zm0 5v2h18v-2zm0 5v2h18v-2z"/>
+                        <svg viewBox="0 0 24 24" width="24" height="24">
+                            <path d="M3 6v2h18v-2zm0 5v2h18v-2zm0 5v2h18v-2z" />
                         </svg>
                     </label>
                 </header>
